--- a/refs.bib
+++ b/refs.bib
@@ -230,3 +230,70 @@
   year={2021},
   organization={PMLR}
 }
+@article{learningToSchedule,
+  title={Mary, Hugo, and Hugo*: Learning to schedule distributed data-parallel processing jobs on shared clusters},
+  author={Thamsen, Lauritz and Beilharz, Jossekin and Tran, Vinh Thuy and Nedelkoski, Sasho and Kao, Odej},
+  journal={Concurrency and Computation: Practice and Experience},
+  volume={33},
+  number={18},
+  pages={e5823},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+@article{scarl,
+  title={SCARL: attentive reinforcement learning-based scheduling in a multi-resource heterogeneous cluster},
+  author={Cheong, Mukoe and Lee, Hyunsung and Yeom, Ikjun and Woo, Honguk},
+  journal={IEEE Access},
+  volume={7},
+  pages={153432--153444},
+  year={2019},
+  publisher={IEEE}
+}
+@inproceedings{smartYarn,
+  title={Cost-efficient negotiation over multiple resources with reinforcement learning},
+  author={Xu, Yu and Yao, Jianguo and Jacobsen, Hans-Arno and Guan, Haibing},
+  booktitle={2017 IEEE/ACM 25th International Symposium on Quality of Service (IWQoS)},
+  pages={1--6},
+  year={2017},
+  organization={IEEE}
+}
+@inproceedings{vconf,
+  title={Vconf: a reinforcement learning approach to virtual machines auto-configuration},
+  author={Rao, Jia and Bu, Xiangping and Xu, Cheng-Zhong and Wang, Leyi and Yin, George},
+  booktitle={Proceedings of the 6th international conference on Autonomic computing},
+  pages={137--146},
+  year={2009}
+}
+@inproceedings{DeepRM,
+  title={Resource management with deep reinforcement learning},
+  author={Mao, Hongzi and Alizadeh, Mohammad and Menache, Ishai and Kandula, Srikanth},
+  booktitle={Proceedings of the 15th ACM workshop on hot topics in networks},
+  pages={50--56},
+  year={2016}
+}
+@article{tetris,
+  title={Multi-resource packing for cluster schedulers},
+  author={Grandl, Robert and Ananthanarayanan, Ganesh and Kandula, Srikanth and Rao, Sriram and Akella, Aditya},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={44},
+  number={4},
+  pages={455--466},
+  year={2014},
+  publisher={ACM New York, NY, USA}
+}
+@article{tarema,
+  title={Tarema: Adaptive Resource Allocation for Scalable Scientific Workflows in Heterogeneous Clusters},
+  author={Bader, Jonathan and Thamsen, Lauritz and Kulagina, Svetlana and Will, Jonathan and Meyerhenke, Henning and Kao, Odej},
+  journal={arXiv preprint arXiv:2111.05167},
+  year={2021}
+}
+@article{tovarjob,
+  title={A job sizing strategy for high-throughput scientific workflows},
+  author={Tovar, Benjamin and da Silva, Rafael Ferreira and Juve, Gideon and Deelman, Ewa and Allcock, William and Thain, Douglas and Livny, Miron},
+  journal={IEEE Transactions on Parallel and Distributed Systems},
+  volume={29},
+  number={2},
+  pages={240--253},
+  year={2017},
+  publisher={IEEE}
+}
