finished most of approach and changed chair to DOS

--- a/mainmatter/03_related_work.tex
+++ b/mainmatter/03_related_work.tex
@@ -48,7 +48,7 @@ Finally there is \cite{tovarjob} which presents a job sizing strategy for tasks 
 
 This idea also served as inspiration for the naive approach used here, namely the idea to assign the maximum resources available and observe a task’s performance is an interesting strategy for determining how to size a task. This of course assumes that a task’s resource usage is independent of its available resources. It is also a notably different approach to exploring the available space of resource allocations from that of the reinforcement learning approaches used here. Lastly unlike in \cite{FeedbackBasedAllocation}, \cite{tovarjob} also looks at CPUs and how to assign this resource to tasks within scientific workflows.
 
-\section{Significant Takeaways from these Works}
+\section{Summary of Similarities and Points of Interest in these Works}
 \label{sec:takeaways}
 
 All of the papers discussed in sections \ref{sec:rl_scheduling} and \ref{sec:rl_allocation} managed to utilize reinforcement learning in an administrative fashion to improve the performance of jobs in their respective computing environments. A common theme among the papers concerned with resource utilization was to limit the action space to increasing, decreasing or keeping the current allocation or resources and storing the current allocation as the agent’s state. The majority of the papers also utilized neural networks and it is also worth noting that most of them used runtime in their reward functions. A key difference between all of the above papers and this thesis is that these papers handled the direct allocation of resources among the machines in their environment to tasks or jobs, whereas in a scientific workflow management system the tasks are given a resource allocation by the SWMS and this is then passed on to a platform or cluster management software which handles the actual allocation of the job to a machine. Indeed it is possible for these two learning systems to interact with one another without knowing it.
