--- a/frontmatter/front.tex
+++ b/frontmatter/front.tex
@@ -14,7 +14,7 @@
     \large{November 30, 2021}\\[2pc]
 
     BACHELOR'S THESIS\\
-    Adaptive Resource Management Chair\\
+    Distributed and Operating Systems Chair\\
     Technische Universitaet Berlin
 \end{center}
 \vfill
