--- a/thesis.tex
+++ b/thesis.tex
@@ -174,6 +174,7 @@ linkcolor=blue, citecolor=blue, urlcolor=blue]{hyperref}
 \include{mainmatter/03_related_work}
 \include{mainmatter/04_approach}
 \include{mainmatter/05_evaluation}
+\include{mainmatter/06_conclusion}
 % Include more chapters as required.
 
 %%=========================================
